# spotify-rust

./: Cargo.toml  Description_UseCases.txt  LICENSE  activity_diagram.drawio  classes.drawio  communication_diagram.drawio  component_diagram.drawio  deployment_diagram.drawio  link.txt  object_diagram.drawio  package_diagram.drawio  sequence_diagram.drawio  use_case.drawio  whatever.drawio
src/: api_response.rs  entities.rs  external_url.rs  gui.rs  index.html  main.rs  style.css  token.rs
src/entities/: album.rs  artist.rs  image.rs  track.rs
