[package]
name = "simple_web_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
urlencoding = "2.1.2"
open = "3.0.2"
async-events = "0.1.1"
base64 = "0.13.0"
json = "0.12.4"