[package]
name = "simple_web_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# https://docs.rs/reqwest/latest/reqwest/
reqwest = { version = "0.11.11", features = ["json", "blocking"] }

# https://docs.rs/tokio/1.21.0/tokio/
tokio = { version = "1.12.0", features = ["full"] }

# https://docs.rs/base64/0.13.0/base64/
base64 = "0.13.0"

serde = { version = "1.0.144", features = ["derive"] }

fltk = "1.3.23"
image = "0.24.5"
random-string = "1.0.0"